fix alignment problem

--- a/website/app/globals.css
+++ b/website/app/globals.css
@@ -25,6 +25,7 @@
 
 html {
   scroll-behavior: auto;
+  overflow-x: hidden;
 }
 
 body {
